# LogQuerify

./: Cargo.toml  README.md
.github/workflows/: auto-reviewer.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs  log_custom_schema.rs  logger_type.rs  main.rs
core/src/parser/: mod.rs
core/src/parser/logback/: logback_parser.rs  logback_tokenizer.rs  mod.rs
storages/local-file-storage/: Cargo.toml
storages/local-file-storage/src/: error.rs  lib.rs  local_file_storage.rs  store.rs  store_mut.rs
