[workspace]
members = [
    "core",
    "storages/*"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "LogQuerify is reading logfile to SQL"
license = "Apache-2.0"

[workspace.dependencies]
core = { path = "./core", version = "0.0.1" }
local-file-storage = { package = "local-file-storage", path = "./storages/local-file-storage", version="0.0.1" }